nivasa-macros/tests/trybuild/controller_set_metadata_missing_key.stderr
error: `#[set_metadata]` requires a `key` entry
 --> tests/trybuild/controller_set_metadata_missing_key.rs:3:1
  |
3 | #[set_metadata(value = "users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `set_metadata` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `controller`
 --> tests/trybuild/controller_set_metadata_missing_key.rs:1:21
  |
1 | use nivasa_macros::{controller, set_metadata};
  |                     ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
