nivasa-macros/tests/trybuild/controller_set_metadata_missing_key.rs
use nivasa_macros::{controller, set_metadata};

#[set_metadata(value = "users")]
#[controller("/users")]
struct UsersController;

fn main() {}
